<resources>
    <string name="app_name">麻雀e疗Demo</string>

    <string name="main_page">首页</string>
    <string name="load_data_page">演示数据加载</string>


    <string name="name_fragment_mine"></string>
    <string name="name_fragment_jiankang">健康</string>
    <string name="name_fragment_shangcheng"></string>
    <string name="name_fragment_tijian">体检</string>
    <string name="name_fragment_jinri">今日健康</string>


    <string name="addr_name">西安市</string>
    <string name="fragmentone_name">今日</string>
    <string name="fragmenttwo_name">体检</string>
    <string name="fragmentthree_name">商城</string>
    <string name="fragmentfour_name">健康</string>
    <string name="fragmentfive_name">我的</string>


    <string name="name_guizeshuoming">规则说明</string>
    <string name="name_jiankangxingweizhishu">健康行为指数</string>
    <string name="name_renwukewancheng">任务可完成</string>
    <string name="name_dingdankepingjia">订单可评价</string>
    <string name="name_lingqumaquebi">您有麻雀币可领取！</string>


    <string name="name_yiliaofuwu">医疗服务</string>
    <string name="name_yiliaofuwu_jieshao">-内外科陪护/妇产科陪护/就医绿色通道/贴针灸/医学微视</string>
    <string name="name_jiankangshangpin">健康商品</string>
    <string name="name_jiankangzixun">健康资讯</string>

    <string name="name_zhiding">置顶</string>
    <string name="name_remen">热门</string>


    <string name="name_pingtaituijian">平台推荐</string>
    <string name="name_tijianjigou">体检机构</string>
    <string name="name_tijiantaocan">体检套餐</string>
    <string name="name_dingzhitijian">定制体检</string>
    <string name="name_zhuanjiadingzhijilu">专家定制记录</string>


    <string name="name_tijianjigouxiangqing">体检机构详情</string>
    <string name="name_jigoujieshao">机构介绍</string>
    <string name="name_jigoutaocan">机构套餐</string>


    <string name="name_tijianka">体检卡</string>
    <string name="name_zijidingzhi">自己定制</string>
    <string name="name_zhuanjiadingzhi">专家定制</string>

    <string name="name_zhenxuanjigou">甄选机构</string>
    <string name="name_zhenxuantaocan">甄选套餐</string>
    <string name="name_gegnduo">更多</string>


    <string name="name_jiankangyundong">健康运动</string>
    <string name="name_muyinghuli">母婴护理</string>
    <string name="name_jiankangshebei">健康设备</string>
    <string name="name_shipinbaojian">食品保健</string>
    <string name="name_jiankangjiaju">健康家居</string>
    <string name="name_meizhuangxihu">美妆洗护</string>
    <string name="name_jiankangbaoxian">健康保险</string>
    <string name="name_fenlei">分类</string>


    <string name="name_maqueyoupinchengnuo">麻雀优品承诺</string>
    <string name="name_maqueyoupinchengnuo_gengduo">正品保证 假一赔十 售后无忧</string>
    <string name="name_maqueyoupinchengnuo_chakanxiangqing">查看详情</string>


    <string name="name_remaituijian">热卖推荐</string>
    <string name="name_pinzhishenghuo">品质生活</string>
    <string name="name_xianshicuxiao">限时促销</string>

    <string name="name_shangpinmingcheng">商品名称AAAAA</string>
    <string name="name_shangpinjiage">￥888</string>


    <string name="name_zuijinsousuo">最近搜索</string>
    <string name="name_resou">热搜</string>

    <string name="name_taocanfenlei_1">中老年体检</string>
    <string name="name_taocanfenlei_2">青年白领</string>
    <string name="name_taocanfenlei_3">专项体检</string>
    <string name="name_taocanfenlei_4">专项体检</string>
    <string name="name_taocanfenlei_5">专项体检</string>

    <string name="name_taocanpingjia">套餐评价</string>
    <string name="name_lijigoumai">立即购买</string>

    <string name="name_taocanzongjia">套餐总价</string>
    <string name="name_youhui">优惠</string>
    <string name="name_maquebi">麻雀币</string>
    <string name="name_dingdanjine">订单金额</string>
    <string name="name_heji">合计:</string>
    <string name="name_tijiaodingdan">提交订单</string>


    <string name="name_zhifudingdan">支付订单</string>
    <string name="name_dingdanbianma">订单编码:</string>
    <string name="name_xiadanshijian">下单时间</string>
    <string name="name_taocanzonge">套餐总额</string>
    <string name="name_youhuijine">优惠金额</string>
    <string name="name_xufukuan">需付款</string>

    <string name="name_yuezhifu">余额支付</string>
    <string name="name_weixinzhifu">微信支付</string>
    <string name="name_zhifubaozhifi">支付宝支付</string>
    <string name="name_zhifi">支付</string>
    <string name="name_zhifijinggao">请在下单后24小时内及时支付，否则系统会自动取消订单</string>


    <string name="name_tianjiatijianka">添加体检卡</string>
    <string name="name_tianjialiucheng">添加流程</string>
    <string name="name_qingshurutijiankahao">请输入体检卡号</string>
    <string name="name_xiayibu">下一步</string>


    <string name="name_tijiankashiyong">体检卡使用</string>
    <string name="name_chakanzunxiangfuwu">查看尊享服务</string>
    <string name="name_taocanA">套餐A名称</string>
    <string name="name_xiaoji">小计:</string>
    <string name="name_anzhaotuijianxiangmutijian">按照推荐项目体检</string>
    <string name="name_tiaozhengtijianxiangmu">调整体检项目</string>
    <string name="name_kankanqitajigou">看看其他机构</string>

    <string name="name_caozuoliucheng">操作流程</string>
    <string name="name_tiaozhengxiangmu">调整项目</string>
    <string name="name_yixuanxiangmu">已选项目</string>
    <string name="name_kexuanxiangmu">可选项目</string>
    <string name="name_querentijiao">确认提交</string>


    <string name="name_touxiang">头像</string>
    <string name="name_xingming">姓名</string>
    <string name="name_xingbie">性别</string>
    <string name="name_chushengriqi">出生日期</string>
    <string name="name_shoujihaoma">手机号码</string>
    <string name="name_shenfenzhenghaoma">身份证号码</string>
    <string name="name_hunfou">婚否</string>
    <string name="name_yufou">育否</string>
    <string name="name_lianxidianhua">联系电话</string>
    <string name="name_nianling">年龄</string>
    <string name="name_chengshi">城市</string>
    <string name="name_tijiao">提交</string>
    <string name="name_hunyinzhuangkuang">婚姻状况</string>
    <string name="name_jiguan">籍贯</string>
    <string name="name_zhiye">职业</string>
    <string name="name_xuexing">血型</string>
    <string name="name_wenhuachengdu">文化程度</string>
    <string name="name_shenfenzhenghao">身份证号</string>
    <string name="name_dianhua">电话</string>
    <string name="name_jiwangbingshi">既往病史</string>
    <string name="name_zaifuyaowu">在服药物</string>
    <string name="name_guominshi">过敏史</string>


    <string name="name_zhuanjia_zhiyi1">请注意核对联系电话</string>
    <string name="name_zhuanjia_zhiyi2">体检定制专家会在48小时内跟您联系</string>
    <string name="name_zhuanjia_zhiyi3">联系时间：工作日9:00～18:00</string>


    <string name="name_shichangjia">市场价</string>
    <string name="name_kefu">客服</string>
    <string name="name_shoucang">收藏</string>
    <string name="name_gouwuche">购物车</string>
    <string name="name_jiarugouwuche">加入购物车</string>
    <string name="name_wenxintishi">温馨提示</string>
    <string name="name_wenxintishi_xiangqing">\t\t\t Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodaleluctus nunc eget.</string>
    <string name="name_shangpinpingjia">商品评价</string>

    <string name="name_dizhitishi1">很抱歉,</string>
    <string name="name_dizhitishi2">您还没有收货地址!</string>
    <string name="name_dizhitishi3">点击添加</string>


    <string name="name_shouhuoren">收货人:</string>
    <string name="name_shouhuodizhi">收货地址:</string>
    <string name="name_peisongfangshi">配送方式</string>

    <string name="name_xiaoxi">消息</string>
    <string name="name_guanfangxiaoxi">官方消息</string>
    <string name="name_zhanghutongzhi">账户通知</string>
    <string name="name_fuwutongzhi">服务通知</string>
    <string name="name_wuliuzhushou">物流助手</string>
    <string name="name_hudongxiaoxi">互动消息</string>
    <string name="name_pingtaikefu">平台客服</string>
    <string name="name_yixuekefu">医学客服</string>


    <string name="name_xiangqingjieshao">详情介绍</string>
    <string name="name_guanzhu">+关注</string>
    <string name="name_wenzhangpinglun">文章评论</string>

    <string name="name_dingzhigaiyao">定制概要</string>
    <string name="name_tuijiantaocao">推荐套餐</string>
    <string name="name_zhuanjiadingzhixiangqing">专家定制详情</string>
    <string name="name_yiduiyidingzhigoutong">1V1定制沟通</string>


    <string name="name_quanbupingjia">全部评价</string>
    <string name="name_haopingdu">好评度</string>
    <string name="name_quanbu">全部</string>
    <string name="name_youtu">有图</string>


    <string name="name_jiankang">健康</string>
    <string name="name_jiankangdangan">健康档案</string>
    <string name="name_jiankangfuwu">健康服务</string>
    <string name="name_xindeshenqing">新的申请</string>
    <string name="name_qiehuandangan">切换档案</string>
    <string name="name_jibenxinxi">基本信息</string>
    <string name="name_jiankangpinggu">健康评估</string>
    <string name="name_richangjiankangshuju">日常健康数据</string>
    <string name="name_tijianjiankangshuju">体检健康数据</string>
    <string name="name_jiuyijiankangshuju">就医健康数据</string>

    <string name="name_shenqingtongzhi">申请通知</string>
    <string name="name_ninkenengrenshi">您可能认识</string>
    <string name="name_tongyi">同意</string>
    <string name="name_jujue">拒绝</string>
    <string name="name_yitongyi">已同意</string>
    <string name="name_yijujue">已拒绝</string>
    <string name="name_dengdaiyanzheng">等待验证</string>
    <string name="name_qingqiuguanliandangan">请求关联档案</string>
    <string name="name_guanliandangan">关联档案</string>
    <string name="name_fujiaxinxi">附加信息</string>
    <string name="name_laiyuan">来源</string>
    <string name="name_danganchuangjian">档案创建</string>
    <string name="name_xingmingchazhao">姓名查找</string>
    <string name="name_shenfenzhenghaochazhao">身份证号查找</string>
    <string name="name_tiianjia">添加</string>
    <string name="name_shenfenzheng">身份证：</string>
    <string name="name_chakangengduo">查看更多</string>
    <string name="name_guanliangengduodangan">关联更多档案</string>


    <string name="name_shenqingxinxichuli">申请信息处理</string>
    <string name="name_shenqingrenxinxi">申请人信息</string>
    <string name="name_guanliandanganxinxi">关联档案信息</string>


    <string name="name_youpinshangcheng">优品商城</string>
    <string name="name_tesejiuyi">特色就医</string>
    <string name="name_hulipeihu">护理陪护</string>
    <string name="name_yixueweishi">医学微视</string>

    <string name="name_maqueoyujiang">麻雀运动</string>
    <string name="name_huodongguize">活动规则</string>
    <string name="name_jianbuyoujiang">健步有奖</string>
    <string name="name_jiangchijine">奖池金额</string>
    <string name="name_dangqianmingci">当前名次</string>
    <string name="name_zanwupaihang">暂无排行</string>
    <string name="name_dangqianpaimingjiangli">当前排名奖励</string>
    <string name="name_jianglipaiming">奖励排名</string>


    <string name="name_yongyaotixing">用药提醒</string>
    <string name="name_meirijilu">每日记录</string>
    <string name="name_dajishi">大记事</string>
    <string name="name_jiuyijilu">就医记录</string>
    <string name="name_tiezhenjiu">贴针灸</string>


    <string name="name_zhichimendian">支持门店</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
