<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maqueezu.el.ui.activity.child.physicalexamination_child.CustomExpertActivity">


    <include layout="@layout/view_title1"
        android:id="@+id/include1"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_base_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include1"
        >
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            >
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_xingming"
                />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/ll_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_below="@id/ll_name"
            >
            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_xingbie"
                />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/fanhui"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:text="男" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_telPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_below="@id/ll_sex"
            >
            <TextView
                android:id="@+id/telPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_lianxidianhua"
                />
            <EditText
                android:id="@+id/et_telPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_below="@+id/ll_telPhone"
            >
            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_xingming"
                />
            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                />
        </com.zhy.autolayout.AutoLinearLayout>


    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_base_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_base_1"
        android:layout_marginTop="@dimen/dp_50"
        >
        <TextView
            android:id="@+id/zhuyi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_zhuanjia_zhiyi1"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/zhuyi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_zhuanjia_zhiyi2"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/zhuyi1"
            />
        <TextView
            android:id="@+id/zhuyi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_zhuanjia_zhiyi3"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/zhuyi2"
            />

    </com.zhy.autolayout.AutoRelativeLayout>

    <Button
        android:id="@+id/bt_zhuanjiadingzhi_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_tijiao"
        android:layout_alignParentBottom="true"
        />

</com.zhy.autolayout.AutoRelativeLayout>
