<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    >

    <ImageView
        android:id="@+id/mImage_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/mTv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/mImage_head"
        android:text="姓名"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        />
    <TextView
        android:id="@+id/mTv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mTv_name"
        android:text="三十"
        android:drawableLeft="@mipmap/jiantou"
        android:layout_toRightOf="@id/mImage_head"
        android:textColor="@color/blue"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_qingqiuguanliandangan"
        android:layout_toRightOf="@id/mTv_age"
        android:layout_below="@id/mTv_name"
        />
    <TextView
        android:id="@+id/guanliandangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_guanliandangan"
        android:layout_toRightOf="@id/mImage_head"
        android:layout_below="@id/mTv_age"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        />
    <TextView
        android:id="@+id/mTv_relationArchives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX"
        android:layout_toRightOf="@id/guanliandangan"
        android:layout_below="@id/mTv_age"
        />
    <TextView
        android:id="@+id/laiyuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_laiyuan"
        android:layout_toRightOf="@id/mImage_head"
        android:layout_below="@id/guanliandangan"
        android:layout_marginLeft="@dimen/dp_10"
        />
    <TextView
        android:id="@+id/mTv_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="档案创建"
        android:layout_toRightOf="@id/laiyuan"
        android:layout_below="@id/guanliandangan"
        />
    <TextView
        android:id="@+id/mTv_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_tongyi"
        android:padding="@dimen/dp_5"
        android:background="@drawable/shape1"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        />
</com.zhy.autolayout.AutoRelativeLayout>
