<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maqueezu.el.ui.activity.child.physicalexamination_child.CustomExpertDetailsActivity">

    <include layout="@layout/view_title1"
        android:id="@+id/include1"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include1"
        android:fillViewport="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="blocksDescendants"
        >
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_base_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include1"
        >
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            >
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_xingming"
                />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="end"
                />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/ll_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_below="@id/ll_name"
            >
            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_xingbie"
                />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:text="男" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_telPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_below="@id/ll_sex"
            >
            <TextView
                android:id="@+id/telPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_lianxidianhua"
                />
            <TextView
                android:id="@+id/tv_telPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="end"
                />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ll_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_below="@id/ll_telPhone"
            >
            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_nianling"
                />
            <TextView
                android:id="@+id/tv_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="end"
                />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:layout_below="@id/ll_age"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_chengshi"
                />
            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/fanhui"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:gravity="end"
                android:text="西安" />
        </com.zhy.autolayout.AutoRelativeLayout>

    </com.zhy.autolayout.AutoRelativeLayout>

    <!--定制概要-->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_base_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_base_1"
        >
        <TextView
            android:id="@+id/dingzhigaiyao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_dingzhigaiyao"
            android:textSize="@dimen/sp_18"
            android:layout_marginLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            />
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dingzhigaiyao"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="
Ave Maria grazia ricevuta per la mia famiglia.
Con risentito con un'amorevole divino
A men.

Grazie chiedo a te o signore divino
In questo giorno di grazia prego per te
A men"
                />
        </com.zhy.autolayout.AutoRelativeLayout>


    </com.zhy.autolayout.AutoRelativeLayout>


    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_base_2"
        >
        <TextView
            android:id="@+id/tuijiantaocan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_tuijiantaocao"
            android:textSize="@dimen/sp_18"
            android:layout_marginLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mRecycler_RecommendSetmeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tuijiantaocan"
                android:focusable="false"
                >

            </android.support.v7.widget.RecyclerView>

    </com.zhy.autolayout.AutoRelativeLayout>

        </com.zhy.autolayout.AutoRelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</com.zhy.autolayout.AutoRelativeLayout>
